create github pages

--- a/page1.html
+++ b/page1.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rB9vPlOl9X" id="header2-1d">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="cid-rB9vPlOl9X" id="header2-1d">
 
     
 
