create github pages

--- a/page3.html
+++ b/page3.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-s3pgzOrq4k" id="header2-2x">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="cid-s3pgzOrq4k" id="header2-2x">
 
     
 
