--- a/page2.html
+++ b/page2.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="cid-rH9thjoZan" id="image3-1s">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="cid-rH9thjoZan" id="image3-1s">
 
     
 
