create github pages

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <div class="container">
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5"><strong>CONTEÚDO EXTRA
+            <div class="section-text align-center mbr-white mbr-fonts-style display-7"><strong>CONTEÚDO EXTRA
 </strong><div>
 </div><div>✔ Definicões da Aromaterapia
 </div><div>✔ Tipos de Pele e Cuidados
@@ -1087,10 +1087,10 @@
             </div>
         </div>
     </div>
-</section><a href="https://sun.eduzz.com/260269?src=notificação" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="536"><img name="misto" id="prova-social" src="https://cursodeaph.com/online/imagens/n1.png" class="img-responsive" media-simple="true">
-</a><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="536"></script><style type="text/css" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="536">
+</section><a href="https://sun.eduzz.com/260269?src=notificação" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="688"><img name="misto" id="prova-social" src="https://cursodeaph.com/online/imagens/n1.png" class="img-responsive" media-simple="true">
+</a><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="688"></script><style type="text/css" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="688">
 	#prova-social{position: fixed; bottom: 2%; left: 2%}
-</style><script class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="536">
+</style><script class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="688">
     $('#prova-social').hide();
 
     var $doc = $('html, body');
@@ -1165,7 +1165,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Page <a href="https://mobirise.site/f" style="color:#aaa;">was made</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Visit site</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
