create github pages

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Você não Precisa mais Esperar virar o Mês Para Ter Salario
-<div>Aprenda Criar Sabonetes Artesanais &amp; Diversos Produtos Aromáticos Em Casa.</div></h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;">Você não Precisa mais Esperar virar o Mês Para Ter Salario
+</span><div><span style="font-weight: normal;">Aprenda Criar Sabonetes Artesanais &amp; Diversos Produtos Aromáticos Em Casa.</span></div></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Aproveite a OPORTUNIDADE e Aprenda uma nova atividade e ainda podendo Faturar com a Venda.
@@ -1046,10 +1046,10 @@
             </div>
         </div>
     </div>
-</section><a href="https://sun.eduzz.com/260269?src=notificação" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="979"><img name="misto" id="prova-social" src="https://cursodeaph.com/online/imagens/n1.png" class="img-responsive" media-simple="true">
-</a><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="979"></script><style type="text/css" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="979">
+</section><a href="https://sun.eduzz.com/260269?src=notificação" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="1120"><img name="misto" id="prova-social" src="https://cursodeaph.com/online/imagens/n1.png" class="img-responsive" media-simple="true">
+</a><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="1120"></script><style type="text/css" class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="1120">
 	#prova-social{position: fixed; bottom: 2%; left: 2%}
-</style><script class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="979">
+</style><script class="cid-rwOQLiKEbZ" id="content5-i" data-rv-view="1120">
     $('#prova-social').hide();
 
     var $doc = $('html, body');
@@ -1124,7 +1124,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Design your own web page with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">site</a> themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
